CLEANED UP HALF THE CODE